// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render action buttons on ansible modal render no action button for ansible history page 1`] = `Array []`;

exports[`render action buttons on ansible modal render no action button when ansible operator isn not installed 1`] = `Array []`;

exports[`render action buttons on ansible modal render three action buttons with delete button 1`] = `
Array [
  <AcmButton
    onClick={[MockFunction]}
    variant="primary"
  >
    Save
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="secondary"
  >
    Cancel
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="danger"
  >
    Delete
  </AcmButton>,
]
`;

exports[`render action buttons on ansible modal render two action buttons without delete button when no policy automation 1`] = `
Array [
  <AcmButton
    onClick={[MockFunction]}
    variant="primary"
  >
    Save
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="secondary"
  >
    Cancel
  </AcmButton>,
]
`;
